# llvm-project

./: .gitignore  CONTRIBUTING.md  GITHUB_AUTHENTICATION.md  new1.ll  state_checking_many_to_one.txt  state_preservation_explanation.txt  test1.ll  test_branch.ll  test_complex_branch.c  test_partial_collapse.ll  test_partial_collapse_detailed.ll  test_partial_collapse_mapping.c  test_partial_collapse_witness.cpp  test_two_blocks.ll  test_verification.cpp
llvm/: .gitignore  CMakeLists.txt  evaluate_gn.sh  evaluate_witness.sh
llvm/WitnessPasses/: CMakeLists.txt
llvm/WitnessPasses/include/: AcslDCE.h  CFGMappingWitness.h  DSEWitnessPass.h  GVNLocal.h  GVNMappingWitness.h  GVNWitness.h  GVNWitnessPass.h  HelloWorld.h  Invariant.h  SimplifyCFGWitness.h  Utils.h  WitnessChecker.h  Z3Utils.h
llvm/WitnessPasses/src/: AcslDCE.cpp  AcslRegistration.cpp  CFGMappingWitness.cpp  DSEWitnessPass.cpp  GVNLocal.cpp  GVNLocal.h  GVNMappingWitness.cpp  GVNWitness.cpp  GVNWitnessPass.cpp  HelloWorldPass.cpp  Invariant.cpp  SimplifyCFGUtils.cpp  SimplifyCFGWitness.cpp  WitnessChecker.cpp  s.txt  test.txt
llvm/include/llvm/IR/: Instructions.h
llvm/lib/Transforms/Scalar/: CMakeLists.txt  GVN.cpp  Reg2Mem.cpp  SimplifyCFGPass.cpp
llvm/lib/Transforms/WitnessPasses/: CMakeLists.txt
llvm/test/Bitcode/: .test.dot  Untitled-1.py  dead_code.ll  myfile.ll  new.ll  new1.ll  output.ll  output1.ll  output2.ll  output3.ll  test1.ll  test1.ll.callgraph.dot
llvm/test/Transforms/ADCE/: output1.ll
llvm/test/Transforms/DCE/: basic.ll  new.ll  (+1 more)
llvm/test/Witness/: new1.  test1.ll  test1_fixed.ll
(+12 files in other folders)
